maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:3: error: not found: value keepHandOnSide
    keepHandOnSide()
    ^Escaper:9: error: not found: value keepHandOnSideWall
keepHandOnSideWall(){
^Escaper:27: error: not found: value estfaceMur
  var d = estfaceMur()
          ^