maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit()){
    keepHandOnSide()
  }
  prendBiscuit()
}


keepHandOnSideWall(){
  situation match{
    case 0 => avance()
    case 1 => gauche()
    case 2 => retourne()
    case 3 => droite()
  }
  }




def situation(): Int ={
  var front = estFaceMur()
  gauche()
  var g = estFaceMur()
  droite()
	droite()
  var d = estfaceMur()
	gauche()
  if (g){return 0}
  if (front && d && !g){return 1}
  if (front && g && d){return 2}
  else {return 3}
}
	
	